--- a/SDL_WindowEvent.mediawiki
+++ b/SDL_WindowEvent.mediawiki
@@ -8,7 +8,7 @@ A structure that contains window state change event data (event.window.*).
 
 == Data Fields ==
 {|
-|Uint8
+|Uint32
 |'''type'''
 |SDL_WINDOWEVENT
 |-
@@ -19,6 +19,18 @@ A structure that contains window state change event data (event.window.*).
 |Uint8
 |'''event'''
 |[[SDL_WindowEventID]]
+|-
+|Uint8
+|'''padding1'''
+|
+|-
+|Uint8
+|'''padding2'''
+|
+|-
+|Uint8
+|'''padding3'''
+|
 |-
 |int
 |'''data1'''
