--- a/SDL_KeyboardEvent.mediawiki
+++ b/SDL_KeyboardEvent.mediawiki
@@ -8,7 +8,7 @@ A structure that contains keyboard button event ,,structure,, ^information^ (eve
 
 == Data Fields ==
 {|
-|Uint8
+|Uint32
 |'''type'''
 |SDL_KEYDOWN or SDL_KEYUP
 |-
@@ -17,14 +17,22 @@ A structure that contains keyboard button event ,,structure,, ^information^ (eve
 |the window with keyboard focus, if any
 |-
 |Uint8
-|'''which'''
-|the keyboard device index
-|-
-|Uint8
 |'''state'''
 |SDL_PRESSED or SDL_RELEASED
 |-
-|[[SDL_keysym]]
+|Uint8
+|'''repeat'''
+|non-zero if this is a key repeat
+|-
+|Uint8
+|'''padding2'''
+|
+|-
+|Uint8
+|'''padding3'''
+|
+|-
+|SDL_keysym
 |'''keysym'''
 |the key that was pressed or released
 |}
@@ -35,7 +43,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-*The following is taken from the old wiki, which had fewer data fields*
+*<<Color2(green,The following is taken from the old wiki which had fewer/different data fields)>>*
 
 [[SDL_KeyboardEvent]]() is a member of the [[SDL_Event]] union and is used when an event of type SDL_KEYDOWN or SDL_KEYUP is reported.
 
@@ -49,7 +57,7 @@ Note: Repeating SDL_KEYDOWN events will occur if key repeat is enabled (see SDL_
 :[[SDL_EventType]]???
 
 == Related Structures ==
-:[[SDL_keysym]]???
+:[[SDL_keysym]]???  <<Color2(green,This has no page.)>>
 
 == Related Functions ==
 <<Color2(green,Listed in the old wiki but appear to be absent from 1.3: SDL_EnableKeyRepeat, SDL_EnableUNICODE)>>
