--- a/SDL_JoyAxisEvent.mediawiki
+++ b/SDL_JoyAxisEvent.mediawiki
@@ -8,7 +8,7 @@ A structure that contains joystick axis motion event ,,structure,, ^information^
 
 == Data Fields ==
 {|
-|Uint8
+|Uint32
 |'''type'''
 |SDL_JOYAXISMOTION
 |-
@@ -19,6 +19,14 @@ A structure that contains joystick axis motion event ,,structure,, ^information^
 |Uint8
 |'''axis'''
 |the joystick axis index
+|-
+|Uint8
+|'''padding1'''
+|
+|-
+|Uint8
+|'''padding2'''
+|
 |-
 |int
 |'''value'''
