--- a/SDL_JoyButtonEvent.mediawiki
+++ b/SDL_JoyButtonEvent.mediawiki
@@ -8,7 +8,7 @@ A structure that contains joystick button event ,,structure,, ^information^ (eve
 
 == Data Fields ==
 {|
-|Uint8
+|Uint32
 |'''type'''
 |SDL_JOYBUTTONDOWN or SDL_JOYBUTTONUP
 |-
@@ -23,6 +23,10 @@ A structure that contains joystick button event ,,structure,, ^information^ (eve
 |Uint8
 |'''state'''
 |SDL_PRESSED or SDL_RELEASED
+|-
+|Uint8
+|'''padding1'''
+|
 |}
 
 == Code Examples ==
