--- a/SDL_PeepEvents.mediawiki
+++ b/SDL_PeepEvents.mediawiki
@@ -1,6 +1,9 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT 
+|}
+
 
 = SDL_PeepEvents =
 Use this function to check the event queue for messages and optionally return them.
@@ -11,22 +14,26 @@ Use this function to check the event queue for messages and optionally return th
 int SDL_PeepEvents(SDL_Event*      events,
                    int             numevents,
                    SDL_eventaction action,
-                   Uint32          mask)
+                   Uint32          minType,
+                   Uint32          maxType)
 ```
 
 == Function Parameters ==
 {|
-|'''events'''
-|^a pointer to the ID of the event queue to query^
+|'''events''' 
+|^a pointer to the ID of the event queue to query^ 
 |-
-|'''numevents'''
-|^the number of events to work with^; see [[#Remarks|Remarks]] for details
+|'''numevents''' 
+|^the number of events to work with^; see [[#Remarks|Remarks]] for details 
 |-
-|'''action'''
-|^how to handle the events in the queue^; see [[#action|Remarks]] for details
+|'''action''' 
+|^how to handle the events in the queue^; see [[#action|Remarks]] for details 
 |-
-|'''mask'''
-|*a bit-wise OR of SDL_EVENTMASK(event_type), for all event types you are interested in*; see [[#mask|Remarks]] and [[SDL_EventMask]] for details ???
+|'''minType''' 
+|^the minimum number of events of a specified type^ ??? 
+|-
+|'''maxType''' 
+|^the maximum number of events of a specified type^ ??? 
 |}
 
 == Return Value ==
@@ -38,17 +45,16 @@ You can add your code example here
 ```
 
 == Remarks ==
-<span id="action"></span>
-'''action''' may be any of the following (from enum SDL_eventaction):
+<<Color2(green,NOTE: Recent changes have removed the '''mask''' param but the following information has not been adjusted to reflect this change yet.)>> <span id="action"></span> '''action''' may be any of the following <<Color2(green,(from enum SDL_eventaction which has no page))>>:
 {|
-|SDL_ADDEVENT
-|up to '''numevents''' events will be added to the back of the event queue
+|SDL_ADDEVENT 
+|up to '''numevents''' events will be added to the back of the event queue 
 |-
-|SDL_PEEKEVENT
-|up to '''numevents''' events at the front of the event queue, matching '''mask''', will be returned and will not be removed from the queue
+|SDL_PEEKEVENT 
+|up to '''numevents''' events at the front of the event queue, matching '''mask''', will be returned and will not be removed from the queue 
 |-
-|SDL_GETEVENT
-|up to '''numevents''' events at the front of the event queue, matching '''mask''', will be returned and will be removed from the queue
+|SDL_GETEVENT 
+|up to '''numevents''' events at the front of the event queue, matching '''mask''', will be returned and will be removed from the queue 
 |}
 
 
@@ -58,25 +64,26 @@ If '''action''' is SDL_ADDEVENT, up to '''numevents''' events will be added to t
 
 If '''action''' is SDL_PEEKEVENT, up to '''numevents''' events at the front of the event queue, matching '''mask''', will be returned and will not be removed from the queue.
 
-If '''action''' is SDL_GETEVENT, up to '''numevents''' events at the front of the event queue, matching '''mask''', will be returned and will be removed from the queue. 
+If '''action''' is SDL_GETEVENT, up to '''numevents''' events at the front of the event queue, matching '''mask''', will be returned and will be removed from the queue.
 
 <span id="mask"></span>*Examples of '''mask''':
-*SDL_EVENTMASK (SDL_KEYUP)
-*(SDL_EVENTMASK (SDL_MOUSEBUTTONDOWN) | SDL_EVENTMASK (SDL_MOUSEBUTTONUP))
-*SDL_ALLEVENTS
-*SDL_KEYUPMASK
-*SDL_ALLEVENTS ^ SDL_QUITMASK
+
+* SDL_EVENTMASK (SDL_KEYUP)
+* (SDL_EVENTMASK (SDL_MOUSEBUTTONDOWN) | SDL_EVENTMASK (SDL_MOUSEBUTTONUP))
+* SDL_ALLEVENTS
+* SDL_KEYUPMASK
+* SDL_ALLEVENTS ^ SDL_QUITMASK
+
 *
 
 {i} This function is thread-safe.
 
-<<Color2(green,Is this true in 1.3?)>>
-You may have to call [[SDL_PumpEvents]]() before calling this function. Otherwise, the events may not be ready to be filtered when you call [[SDL_PeepEvents]]().
+<<Color2(green,Is the following true in 1.3?)>> You may have to call [[SDL_PumpEvents]]() before calling this function. Otherwise, the events may not be ready to be filtered when you call [[SDL_PeepEvents]]().
 
 == Related Functions ==
-:[[SDL_PollEvent]] *???
-:[[SDL_PumpEvents]] *???
-:[[SDL_PushEvent]] *???
+: [[SDL_PollEvent]] *???
+: [[SDL_PumpEvents]] *???
+: [[SDL_PushEvent]] *???
 
 ----
-[[CategoryAPI]], [[CategoryEvents]]
+[[CategoryAPI]], CategoryEvents
