--- a/SDL_HasEvent.mediawiki
+++ b/SDL_HasEvent.mediawiki
@@ -14,7 +14,7 @@ SDL_bool SDL_HasEvent(Uint32 type)
 == Function Parameters ==
 {|
 |'''type'''
-|^the type of event to check for^
+|^the type of event to be queried ???; see [[SDL_Event]]/[[SDL_EventType]] ??? for details^
 |}
 
 <<Color2(green,Was this really removed entirely?)>>
