--- a/SDL_WaitEvent.mediawiki
+++ b/SDL_WaitEvent.mediawiki
@@ -18,7 +18,7 @@ int SDL_WaitEvent(SDL_Event* event)
 |}
 
 == Return Value ==
-Returns 1, or 0 if there was an error while waiting for events; call [[SDL_GetError]]() for more information.
+Returns 1 on success, or 0 if there was an error while waiting for events; call [[SDL_GetError]]() for more information.
 
 == Code Examples ==
 ```c++
