--- a/SDL_PushEvent.mediawiki
+++ b/SDL_PushEvent.mediawiki
@@ -17,6 +17,8 @@ int SDL_PushEvent(SDL_Event* event)
 |^a pointer to the [[SDL_Event]] to be added to the queue^
 |}
 
+<<Color2(green,Most other functions w/ the event param say "If not NULL the next event is removed from the queue and stored in that area.")>>
+
 == Return Value ==
 Returns 1 on success, 0 if the event was filtered, or -1 if the event queue was full or there was some other error; call [[SDL_GetError]]() for more information.
 
