--- a/SDL_JoyAxisEvent.mediawiki
+++ b/SDL_JoyAxisEvent.mediawiki
@@ -14,11 +14,11 @@ A structure that contains joystick axis motion event ,,structure,, ^information^
 |-
 |Uint8
 |'''which'''
-|the joystick device index
+|the joystick device index ^*the index of the joystick that reported the event*^
 |-
 |Uint8
 |'''axis'''
-|the joystick axis index
+|the joystick axis index ^*the index of the axis*^
 |-
 |Uint8
 |'''padding1'''
@@ -30,7 +30,7 @@ A structure that contains joystick axis motion event ,,structure,, ^information^
 |-
 |int
 |'''value'''
-|the axis value (range: -32768 to 32767)
+|the axis value ^the current position of the axis^ (range: -32768 to 32767)
 |}
 
 == Code Examples ==
@@ -39,9 +39,13 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+*<br/>[[SDL_JoyAxisEvent]]() is a member of the [[SDL_Event]]()??? union and is used when an event of type SDL_JOYAXISMOTION is reported.
+
+A SDL_JOYAXISMOTION event occurs whenever a user moves an axis on the joystick. ,,The field '''which''' is the index of the joystick that reported the event and '''axis''' is the index of the axis,, <<Color2(orange,(for a more detailed explanation see the Joystick section))>>. ,,'''value''' is the current position of the axis.,, <br/>*
 
 == Related Functions ==
+:[[SDL_JoystickEventState]] *
+:[[SDL_JoystickGetAxis]] *
 
 ----
 [[CategoryStruct]]
