--- a/SDL_JoyButtonEvent.mediawiki
+++ b/SDL_JoyButtonEvent.mediawiki
@@ -14,15 +14,15 @@ A structure that contains joystick button event ,,structure,, ^information^ (eve
 |-
 |Uint8
 |'''which'''
-|the joystick device index
+|the joystick device index ^*the index of the joystick that reported the event*^
 |-
 |Uint8
 |'''button'''
-|the joystick button index
+|the joystick button index ^*the index of the button*^
 |-
 |Uint8
 |'''state'''
-|SDL_PRESSED or SDL_RELEASED
+|SDL_PRESSED or SDL_RELEASED ^*the current state of the button which is either SDL_PRESSED or SDL_RELEASED*^
 |-
 |Uint8
 |'''padding1'''
@@ -35,9 +35,13 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+*<br/>[[SDL_JoyButtonEvent]]() is a member of the [[SDL_Event]]()??? union and is used when an event of type SDL_JOYBUTTONDOWN or SDL_JOYBUTTONUP is reported.
+
+An SDL_JOYBUTTONDOWN or SDL_JOYBUTTONUP event occurs whenever a user presses or releases a button on a joystick. ,,The field '''which''' is the index of the joystick that reported the event and '''button''' is the index of the button ,,<<Color2(orange,(for a more detailed explanation see the Joystick section))>>. ,,'''state''' is the current state of the button which is either SDL_PRESSED or SDL_RELEASED.,, <br/>*
 
 == Related Functions ==
+:[[SDL_JoystickEventState]] *
+:[[SDL_JoystickGetButton]] *
 
 ----
 [[CategoryStruct]]
