--- a/SDL_JoyHatEvent.mediawiki
+++ b/SDL_JoyHatEvent.mediawiki
@@ -14,15 +14,15 @@ A structure that contains joystick hat position change event ,,structure,, ^info
 |-
 |Uint8
 |'''which'''
-|the joystick device index
+|the joystick device index ^*the index of the joystick that reported the event*^
 |-
 |Uint8
 |'''hat'''
-|the joystick hat index
+|the joystick hat index ^*the index of the hat*^
 |-
 |Uint8
 |'''value'''
-|the hat position value; see [[#Remarks|Remarks]] for details
+|the hat position value ^*the current position of the hat*^; see [[#Remarks|Remarks]] for details
 |-
 |Uint8
 |'''padding1'''
@@ -35,7 +35,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-'''value''' may be any of the following:
+'''value''' may be any of the following ^*a bitwise OR'd combination of* any of *the following*^:
 {|
 |SDL_HAT_LEFTUP
 |-
@@ -80,7 +80,13 @@ Note that zero means the POV is centered.
 |}
 Note that zero means the POV is centered. 
 
+*<br/>[[SDL_JoyHatEvent]]() is a member of the [[SDL_Event]]()??? union and is used when an event of type SDL_JOYHATMOTION is reported.
+
+A SDL_JOYHATMOTION event occurs whenever a user moves a hat on the joystick.<br/>*
+
 == Related Functions ==
+:[[SDL_JoystickEventState]] *
+:[[SDL_JoystickGetHat]] *
 
 ----
 [[CategoryStruct]]
