--- a/SDL_PollEvent.mediawiki
+++ b/SDL_PollEvent.mediawiki
@@ -55,7 +55,7 @@ while(SDL_PollEvent(&event)) {  /* Loop until there are no events left on the qu
 *
 
 == Remarks ==
-*If '''event''' is not NULL, the next event is removed from the queue and stored in the [[SDL_Event]] structure pointed to by '''event'''.
+*If '''event''' is not NULL, the next event is removed from the queue and stored in the [[SDL_Event]] ,,structure,, ^union^ pointed to by '''event'''.
 
 As this function implicitly calls [[SDL_PumpEvents]](), you can only call this function in the thread that set the video mode. *  <<Color2(green,Is this true in 1.3?)>>
 
